html tag remove for page 1-2-3

--- a/pages/page1.html
+++ b/pages/page1.html
@@ -1,22 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
 <style>
   .fangresim {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 </style>
-  
-
-  </head>
-  <body>
-
-    <div id="page-content">
-      <img class="fangresim"
-      src="https://www.kuyza.com/dw/Ebook-img/wtfng.jpg">
-    </div>
-  </body>
-</html>
+<div id="page-content">
+  <img class="fangresim" src="https://www.kuyza.com/dw/Ebook-img/wtfng.jpg">
+</div>
