--- a/pages/page1.html
+++ b/pages/page1.html
@@ -1,10 +1,18 @@
+<!DOCTYPE html>
+<html>
+  <head>
 <style>
   .fangresim {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 </style>
-<div id="page-content">
-  <img class="fangresim" src="https://www.kuyza.com/dw/Ebook-img/wtfng.jpg">
-</div>
+  </head>
+  <body>
+    <div id="page-content">
+      <img class="fangresim"
+      src="https://www.kuyza.com/dw/Ebook-img/wtfng.jpg">
+    </div>
+  </body>
+</html>
