--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,34 +1,42 @@
-<div id="page-content">
-	<p style="text-align: center;">
-		<br>
-		Remember what you've learned, watch the video below and discover ways to boost your memory!!!!
-		<iframe class="ytb" style="text-align:center;" width="560" height="315"
-			src="https://www.youtube.com/embed/Rvey9g0VgY0" title="YouTube video player" frameborder="0"
-			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-			allowfullscreen></iframe><br>
-		THIRD EDITION - SEPTEMBER 2020<br>
-		All rights reserved. No part of this publication may be reproduced, stored in a retrieval<br>
-		system, or transmitted in any form or by any means, electronic, mechanical, photocopying,<br>
-		recording, or <span class="tooltip-trigger" data-tooltip-index="150" data-tooltip-ipa="/ˈʌðərwaɪz/"
-			data-tooltip-definition="<strong>otherwise,</strong> &quot;aksi takdirde&quot; anlamına gelmektedir. ">otherwise</span>,
-		bu kitap Jack London kitabının düzenlenmesi ile oluşturulmuştur bazı değişiklikler yapılmıştır orjinal
-		metne göre farklılıklar içermektedir.
-		Örneğin: But she did not try to <span class="tooltip-trigger" data-tooltip-index="98" data-tooltip-ipa="/faɪt/"
-			data-tooltip-definition="<strong>fight,</strong> &quot;kavga etmek&quot; mücadele etmek, savaşmak veya çarpışmak anlamında kullanılır. ">fight</span>
-		with the <span class="tooltip-trigger" data-tooltip-index="138" data-tooltip-ipa="/lɪŋks/"
-			data-tooltip-definition="<strong>lynx,</strong> &quot;vayşi kedi&quot; anlamına gelmektedir. ">lynx</span>
-		that had many hungry <span class="tooltip-trigger" data-tooltip-index="133" data-tooltip-ipa="/ˈkɪtn/"
-			data-tooltip-definition="<strong>kitten,</strong> &quot;kedi yavrusu&quot; anlamına gelmektedir. ">kitten</span>s.
-		Jack London'un White Fang kitabında "<span class="tooltip-trigger" data-tooltip-index="133"
-			data-tooltip-ipa="/ˈkɪtn/"
-			data-tooltip-definition="<strong>kitten,</strong> &quot;kedi yavrusu&quot; anlamına gelmektedir. ">kitten</span>s"
-		kelimesi kullanılmamaktadır. Yukarıdaki cümle örnek olarak
-		verilmiştir ancak orijinal metinde böyle bir kelime yer almaz.
-		<br>||-Dictionaries-||
-		<br>
-		<a href="https://dictionary.cambridge.org" target="_blank">cambridge dictionary</a><br>
-		<a href="https://www.oxfordlearnersdictionaries.com/" target="_blank">oxford dictionary</a>
-		<br>||-Phonetics-||<br>
-		<a href="https://tophonetics.com/" target="_blank">to phonetics</a>
-	</p>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <div id="page-content">
+      <p style="text-align: center;">
+				<br>
+				Remember what you've learned, watch the video below and discover ways to boost your memory!!!!
+				<iframe class="ytb" style="text-align:center;" width="560" height="315" src="https://www.youtube.com/embed/Rvey9g0VgY0"
+					title="YouTube video player" frameborder="0"
+					allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+					allowfullscreen></iframe><br>
+				THIRD EDITION - SEPTEMBER 2020<br>
+				All rights reserved. No part of this publication may be reproduced, stored in a retrieval<br>
+				system, or transmitted in any form or by any means, electronic, mechanical, photocopying,<br>
+				recording, or <span class="tooltip-trigger" data-tooltip-index="150" data-tooltip-ipa="/ˈʌðərwaɪz/"
+					data-tooltip-definition="<strong>otherwise,</strong> &quot;aksi takdirde&quot; anlamına gelmektedir. ">otherwise</span>,
+				bu kitap Jack London kitabının düzenlenmesi ile oluşturulmuştur bazı değişiklikler yapılmıştır orjinal
+				metne göre farklılıklar içermektedir.
+				Örneğin: But she did not try to <span class="tooltip-trigger" data-tooltip-index="98"
+					data-tooltip-ipa="/faɪt/"
+					data-tooltip-definition="<strong>fight,</strong> &quot;kavga etmek&quot; mücadele etmek, savaşmak veya çarpışmak anlamında kullanılır. ">fight</span>
+				with the <span class="tooltip-trigger" data-tooltip-index="138" data-tooltip-ipa="/lɪŋks/"
+					data-tooltip-definition="<strong>lynx,</strong> &quot;vayşi kedi&quot; anlamına gelmektedir. ">lynx</span>
+				that had many hungry <span class="tooltip-trigger" data-tooltip-index="133" data-tooltip-ipa="/ˈkɪtn/"
+					data-tooltip-definition="<strong>kitten,</strong> &quot;kedi yavrusu&quot; anlamına gelmektedir. ">kitten</span>s.
+				Jack London'un White Fang kitabında "<span class="tooltip-trigger" data-tooltip-index="133"
+					data-tooltip-ipa="/ˈkɪtn/"
+					data-tooltip-definition="<strong>kitten,</strong> &quot;kedi yavrusu&quot; anlamına gelmektedir. ">kitten</span>s"
+				kelimesi kullanılmamaktadır. Yukarıdaki cümle örnek olarak
+				verilmiştir ancak orijinal metinde böyle bir kelime yer almaz.
+				<br>||-Dictionaries-||
+				<br>
+				<a href="https://dictionary.cambridge.org" target="_blank">cambridge dictionary</a><br>
+				<a href="https://www.oxfordlearnersdictionaries.com/"  target="_blank">oxford dictionary</a>
+				<br>||-Phonetics-||<br>
+				<a href="https://tophonetics.com/"  target="_blank">to phonetics</a>
+			</p>
+    </div>
+  </body>
+</html>
