--- a/pages/page3.html
+++ b/pages/page3.html
@@ -1,6 +1,12 @@
-<div id="page-content">
-	<h3 style="text-align: center;">Contents</h3>
-	<p style="text-align: center;">
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Page 2</title>
+  </head>
+  <body>
+    <div id="page-content">
+      <h3 style="text-align: center;">Contents</h3>
+	  <p style="text-align: center;">
 		1. The Battle of the Fangs.......5
 		<br>
 		2. The Grey Cub......................8
@@ -39,7 +45,9 @@
 		<br>
 		Notes .....................................71
 		<br>
-		Activities.................................75
-		<br>
+		Activities.................................75	
+		<br>			
 	</p>
-</div>
+    </div>
+  </body>
+</html>
