--- a/pages/page4.html
+++ b/pages/page4.html
@@ -1,62 +1,76 @@
-<title>Page 4</title>
-<meta charset="UTF-8">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<style>
-	@media screen and (max-width: 320px) {
+<!DOCTYPE html>
+<html>
 
-		/* Küçük ekranlar için stil tanımlamaları */
-		.kuyzaimg {
-			width: 300px;
+<head>
+	<title>Page 4</title>
+	<meta charset="UTF-8">
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+	<style>
+		@media screen and (max-width: 320px) {
+
+			/* Küçük ekranlar için stil tanımlamaları */
+			.kuyzaimg {
+				width: 300px;
+			}
 		}
-	}
 
-	@media screen and (min-width: 321px) and (max-width: 767px) {
+		@media screen and (min-width: 321px) and (max-width: 767px) {
 
-		/* Orta boy ekranlar için stil tanımlamaları */
-		.kuyzaimg {
-			width: 350px;
+			/* Orta boy ekranlar için stil tanımlamaları */
+			.kuyzaimg {
+				width: 350px;
+			}
 		}
-	}
 
-	@media screen and (min-width: 768px) and (max-width: 1023px) {
+		@media screen and (min-width: 768px) and (max-width: 1023px) {
 
-		/* Büyük ekranlar için stil tanımlamaları */
-		.kuyzaimg {
-			width: 400px;
+			/* Büyük ekranlar için stil tanımlamaları */
+			.kuyzaimg {
+				width: 400px;
+			}
 		}
-	}
 
-	@media screen and (min-width: 1024px) and (max-width: 1439px) {
+		@media screen and (min-width: 1024px) and (max-width: 1439px) {
 
-		/* Çok büyük ekranlar için stil tanımlamaları */
-		.kuyzaimg {
-			width: 450px;
+			/* Çok büyük ekranlar için stil tanımlamaları */
+			.kuyzaimg {
+				width: 450px;
+			}
 		}
-	}
 
-	@media screen and (min-width: 1440px) and (max-width: 1919px) {
+		@media screen and (min-width: 1440px) and (max-width: 1919px) {
 
-		/* Daha büyük ekranlar için stil tanımlamaları */
-		.kuyzaimg {
-			width: 500px;
+			/* Daha büyük ekranlar için stil tanımlamaları */
+			.kuyzaimg {
+				width: 500px;
+			}
 		}
-	}
 
-	@media screen and (min-width: 1920px) {
+		@media screen and (min-width: 1920px) {
 
-		/* En büyük ekranlar için stil tanımlamaları */
-		.kuyzaimg {
-			width: 800px;
+			/* En büyük ekranlar için stil tanımlamaları */
+			.kuyzaimg {
+				width: 800px;
+			}
 		}
-	}
-</style>
-<div id="page-content">
-	<h1>KELİME ALIŞTIRMASI</h1>
-	<img src="https://www.kuyza.com/dw/Ebook-img/moose.jpg" style="width:100px;height:100px;">
-	<p>Lütfen dikkat: Kitapdaki kelimelerin açıklamaları bulunmaktadır. Açıklamada belirtilen kelimelerin birden
-		fazla anlamı olabilir ve bu kartlarda belirtilen anlamlar
-		kitapta kullanılan anlamları ifade etmektedir. Metinde altı çizgili olan
-		kelimelerin üzerine gelindiğinde açıklamalar görünür. Bu açıklamalar kitap için yeterli olsa da,
-		kelimelerin farklı anlamları da olabilir.</p>
-	<img class="kuyzaimg" src="https://www.kuyza.com/dw/Ebook-img/11.jpg">
-</div>
+	</style>
+
+</head>
+
+<body>
+
+	<div id="page-content">
+		<h1>KELİME ALIŞTIRMASI</h1>
+		<img src="https://www.kuyza.com/dw/Ebook-img/moose.jpg" style="width:100px;height:100px;">
+		<p>Lütfen dikkat: Kitapdaki kelimelerin açıklamaları bulunmaktadır. Açıklamada belirtilen kelimelerin birden
+			fazla anlamı olabilir ve bu kartlarda belirtilen anlamlar
+			kitapta kullanılan anlamları ifade etmektedir. Metinde altı çizgili olan
+			kelimelerin üzerine gelindiğinde açıklamalar görünür. Bu açıklamalar kitap için yeterli olsa da,
+			kelimelerin farklı anlamları da olabilir.</p>
+		<img class="kuyzaimg" src="https://www.kuyza.com/dw/Ebook-img/11.jpg">
+	</div>
+</body>
+
+</html>
